syntax = "proto2";
package rpc;
option go_package = "initialthree/protocol/ss/rpc";
import "ss/proto/rpc/common.proto";

enum pushType{
    EnterMap = 1;
    LeaveMap = 2;
    DoAction = 3;
}

message worldObjPush_req {
    required pushType t = 1;
    optional WOEnterMap   enter   = 2;
    optional WOLeaveMap   leave   = 3;
    optional WODoAction   do      = 4;
}

message WOEnterMap {
    optional string   userID       = 1;
    optional uint64   ID           = 2;   // 角色ID
    optional position pos          = 3;
    optional string   worldAddr    = 4;
}

message WOLeaveMap {
    optional string   userID       = 1;
}

message WODoAction {
    optional string   userID      = 1;
    optional position updatePos   = 2;
}

message worldObjPush_resp {
    required bool ok = 1;
}
